igw.tf
resource "aws_internet_gateway" "igw" {
 vpc_id = aws_vpc.custom_vpc.id

 tags = {
  Name = "custom_igw"
 }
}
