nat.tf
resource "aws_eip" "nat" {
 vpc = true
}

resource "aws_nat_gateway" "nat" {
 allocation_id = aws_eip.nat.id
 subnet_id    = aws_subnet.public_subnet.id
}
